syntax = "proto3";

package process;

option go_package = "cs425/mp/process";

// The Coordinator service
service CoordinatorServiceForLogs {
    rpc QueryLogs (QueryRequest) returns (QueryReply) {}
    rpc Test_Coordinator_GenerateLogs (Test_Coordinator_GenerateLogsRequest) returns (Test_Coordinator_GenerateLogsReply) {}
  }
  
  message QueryRequest {
    string query = 1;
    bool isTest = 2;
  }
  
  message QueryReply {
    string logs = 1;
    int64 totalMatches = 2;
  }

  message Test_Coordinator_GenerateLogsRequest {
  }

  message Test_Coordinator_GenerateLogsReply {
    string status = 1;
  }